// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Alert should match snapshot 1`] = `
<scale-alert>
  <mock:shadow-root></mock:shadow-root>
  Notifications
</scale-alert>
`;

exports[`Alert should match snapshot when opened 1`] = `
<scale-alert opened="">
  <mock:shadow-root>
    <style>
      .alert-0-0-31 {
  color: #333;
  width: 100%;
  display: flex;
  padding: 1rem;
  position: relative;
  background: #eee;
  box-sizing: border-box;
  text-align: left;
  justify-content: space-between;
}
.alert__body-0-0-32 {
  display: flex;
}
.alert__headline-0-0-33 {
  color: white;
  margin: 0;
  font-size: 1rem;
}
.alert__icon-0-0-34 {
  width: 24px;
  height: 24px;
  margin: 0 0.5rem 0 0;
  display: flex;
  background: none;
  align-items: center;
  border-radius: 4px;
  justify-content: center;
}
.alert__close-0-0-35 {
  cursor: pointer;
  height: 16px;
  opacity: 0.5;
}
.alert__close-0-0-35hover {
  opacity: 1;
}
.alert--variant-brand-0-0-36 {
  color: #fff;
  background: #2962ff;
}
.alert--variant-error-0-0-37 {
  color: #fff;
  background: #f50057;
}
.alert--variant-warning-0-0-38 {
  color: #fff;
  background: #ffc400;
}
.alert--variant-info-0-0-39 {
  color: #fff;
  background: #00b0ff;
}
.alert--variant-success-0-0-40 {
  color: #fff;
  background: #00e676;
}
    </style>
    <div class="alert-0-0-31">
      <div class="alert__body-0-0-32">
        <div class="alert__icon-0-0-34"></div>
        <div>
          <div class="alert__headline-0-0-33"></div>
          <slot></slot>
        </div>
      </div>
      <a class="alert__close-0-0-35">
        x
      </a>
    </div>
  </mock:shadow-root>
  Notifications
</scale-alert>
`;

exports[`Alert should match snapshot with hasSlotClose 1`] = `
<scale-alert opened="">
  <mock:shadow-root>
    <style>
      .alert-0-0-51 {
  color: #333;
  width: 100%;
  display: flex;
  padding: 1rem;
  position: relative;
  background: #eee;
  box-sizing: border-box;
  text-align: left;
  justify-content: space-between;
}
.alert__body-0-0-52 {
  display: flex;
}
.alert__headline-0-0-53 {
  color: white;
  margin: 0;
  font-size: 1rem;
}
.alert__icon-0-0-54 {
  width: 24px;
  height: 24px;
  margin: 0 0.5rem 0 0;
  display: flex;
  background: none;
  align-items: center;
  border-radius: 4px;
  justify-content: center;
}
.alert__close-0-0-55 {
  cursor: pointer;
  height: 16px;
  opacity: 0.5;
}
.alert__close-0-0-55hover {
  opacity: 1;
}
.alert--variant-brand-0-0-56 {
  color: #fff;
  background: #2962ff;
}
.alert--variant-error-0-0-57 {
  color: #fff;
  background: #f50057;
}
.alert--variant-warning-0-0-58 {
  color: #fff;
  background: #ffc400;
}
.alert--variant-info-0-0-59 {
  color: #fff;
  background: #00b0ff;
}
.alert--variant-success-0-0-60 {
  color: #fff;
  background: #00e676;
}
    </style>
    <div class="alert-0-0-51">
      <div class="alert__body-0-0-52">
        <div class="alert__icon-0-0-54"></div>
        <div>
          <div class="alert__headline-0-0-53"></div>
          <slot></slot>
        </div>
      </div>
      <a class="alert__close-0-0-55">
        <div>
          <slot name="close"></slot>
        </div>
      </a>
    </div>
  </mock:shadow-root>
  Notifications
  <div slot="close">
    Close
  </div>
</scale-alert>
`;
